# Kinect-Projects

./: .gitignore  UndistortDepth.py
3dHistograms/: main.cpp
FaceRemoval/: CMakeLists.txt  main.cpp
MovingLeastSquares_PCL/: CMakeLists.txt  CMakeLists.txt~  MLS.cu  MLS.h  MLS_test.cpp  iterate.cu~  iterate.h~
OpticalFlow/: CMakeLists.txt  main.cpp
activityRecognition/: 1.npz  2.npz  ICU Keypoints.ipynb  Makefile  PeopleTracker_1332942853.npz  SkelPlay.py  backgroundSubtract.py  conf.py  dijkstras.pyx  dualViewer.py  featureExtraction.py  hogTests.py  icuReader.py  mainICU.py  peopleTracker.py  pose_superpixels.py  profilePose.py  recognitionTests.py
activityRecognition/_build/doctrees/: environment.pickle  index.doctree
activityRecognition/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
activityRecognition/_build/html/_sources/: index.txt
activityRecognition/pcaGestures/: gestureRecognizer.py
cisstRecorder/: CMakeLists.txt  SamplesConfig.xml  jointLog.txt  oniExKinectTest.cpp  oniExKinectView.cpp
icuRecorder/: CMakeLists.txt  backgroundSubtract.py  conf.py  copyData.py  dualViewer.py  icuReader copy.py  icuReader.py  icuRecorder.cpp  kinectstorage.cpp  kinectstorage.h  reduceFramerate.py  rgbRemover.py
icuRecorder/oniRecorder/: CMakeLists.txt  Makefile  SamplesConfig.xml  main copy.cpp  main.cpp  main_dynamic copy.cpp
oni2depth/: CMakeLists.txt  oni2depth.cpp  ppm2jpg.py
recorder/: CMakeLists.txt  main.cpp
